kubernetes/main/apps/database/cloudnative-pg/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes); operator dials barman-cloud svc
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plugin-barman-cloud
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plugin-barman-cloud
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
